# PokiMate

./: .env.example  .gitignore  GIT_SETUP.md  Makefile  README.md  docker-compose.yml
ai_service/: Dockerfile  main.py  (+1 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  audit_event.py  budget.py  category.py  debt.py  debt_payment.py  goal.py  habit.py  habit_entry.py  holding.py  investment_cashflow.py  life_metric.py  recurring.py  sync_log.py  transaction.py  user.py
backend/app/routes/: admin.py  ai.py  auth.py  debt.py  finance.py  goals.py  health.py  investments.py  life.py  sync.py
backend/app/schemas/: __init__.py  ai.py  auth.py  common.py  debt.py  finance.py  goals.py  investments.py  life.py  sync.py
backend/app/security/: __init__.py  deps.py  hashing.py  jwt.py
backend/app/services/: ai_cache.py  ai_client.py  audit_service.py  csv_import_service.py  debt_engine.py  drive_sync_service.py  encryption_service.py  finance_engine.py  financial_health_engine.py  investment_engine.py  life_score_engine.py  recurring_service.py  ruleset_v1.json
backend/app/utils/: files.py  money.py  seed.py  time.py  validation.py
backend/tests/: test_budget_math.py  test_debt_sim.py  test_encryption_roundtrip.py  test_health_scores.py  test_xirr.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: backend.rs  lib.rs  main.rs  notifications.rs  tray.rs
(+86 files in other folders)
