[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokimate-backend"
version = "0.1.0"
description = "Pokimate backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2,bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "alembic>=1.13",
    "cryptography>=42",
    "argon2-cffi>=23.1",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
